--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,27 @@
 [tool.poetry]
-name = "well"
+name = "api"
 version = "0.1.0"
 description = ""
 authors = []
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.10"
-fastapi = {extras = ["lastest"], version = "^0.75.2"}
+python = ">=3.10,<3.11"
+fastapi = "^0.78.0"
 uvicorn = {extras = ["standard"], version = "0.17.5"}
-SQLAlchemy = "1.4.31"
-alembic = "1.7.6"
+SQLAlchemy = "^1.4.36"
+alembic = "^1.7.7"
 psycopg2-binary = "2.9.3"
-pytest = "7.0.1"
+pytest = "^7.1.2"
 factory-boy = "3.2.1"
 pytest-factoryboy = "2.1.0"
-SQLAlchemy-Utils = "0.38.2"
-requests = "2.27.1"
+SQLAlchemy-Utils = "^0.38.2"
+requests = "^2.27.1"
 pydantic = {extras = ["email"], version = "^1.9.0"}
 databases = {extras = ["aiopg"], version = "^0.5.5"}
 asyncpg = "^0.25.0"
 aiopg = "^1.3.3"
-passlib = {extras = ["bcrypt"], version = "^1.7.4"}
-python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+passlib = "^1.7.4"
+python-jose = "^3.3.0"
 ipython = "^8.3.0"
 python-multipart = "^0.0.5"
 
