--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,14 +16,16 @@ factory-boy = "3.2.1"
 pytest-factoryboy = "2.1.0"
 SQLAlchemy-Utils = "^0.38.2"
 requests = "^2.27.1"
-pydantic = {extras = ["email"], version = "^1.9.0"}
-databases = {extras = ["aiopg"], version = "^0.5.5"}
+pydantic = {extras = ["email"], version = "^1.9.1"}
+databases = "^0.6.0"
 asyncpg = "^0.25.0"
 aiopg = "^1.3.3"
 passlib = "^1.7.4"
 python-jose = "^3.3.0"
 ipython = "^8.3.0"
 python-multipart = "^0.0.5"
+pytest-asyncio = "^0.18.3"
+httpx = "^0.23.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "4.0.1"
