--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ ipython = "^8.3.0"
 python-multipart = "^0.0.5"
 pytest-asyncio = "^0.18.3"
 httpx = "^0.23.0"
+orjson = "^3.7.2"
 
 [tool.poetry.dev-dependencies]
 flake8 = "4.0.1"
