--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,27 +1,45 @@
-exclude: 'node_modules|alembic|migrations|.git|.tox'
-default_stages: [commit]
-
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
+    rev: v4.3.0
     hooks:
-      - id: trailing-whitespace
-      - id: end-of-file-fixer
-      - id: check-yaml
+      - id: check-added-large-files
       - id: check-toml
-
-  - repo: https://github.com/psf/black
-    rev: 22.3.0
+      - id: check-yaml
+        args:
+          - --unsafe
+      - id: end-of-file-fixer
+      - id: trailing-whitespace
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v2.37.1
     hooks:
-      - id: black
-
-  - repo: https://github.com/timothycrosley/isort
-    rev: 5.9.3
+      - id: pyupgrade
+        args:
+          - --py39-plus
+          - --keep-runtime-typing
+  - repo: https://github.com/myint/autoflake
+    rev: v1.4
+    hooks:
+      - id: autoflake
+        args:
+          - --recursive
+          - --in-place
+          - --remove-all-unused-imports
+          - --remove-unused-variables
+          - --exclude
+          - __init__.py,base.py,app/db/base.py
+          - --remove-duplicate-keys
+  - repo: https://github.com/pycqa/isort
+    rev: 5.10.1
     hooks:
       - id: isort
-
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.9.2
+        args:
+          - --line-length=88
+          - --profile
+          - black
+  - repo: https://github.com/psf/black
+    rev: 22.6.0
     hooks:
-      - id: flake8
-        additional_dependencies: [flake8-isort]
+      - id: black
+        args:
+          - --preview
+          - --line-length=88
