--- a/.env.template
+++ b/.env.template
@@ -2,6 +2,7 @@
 SECRET_KEY=some-secret-key
 PROJECT_NAME='Some Project Name'
 SERVER_HOST=http://0.0.0.0:8881
+DEBUG=false
 
 # Databases
 POSTGRES_USER=postgres
